# tfc-code-pipeline

./: .dockerignore  .env.example  .gitignore  CONVENTIONS.md  DEVELOPMENT.md  DOCKER.md  README-write-token-utils-tests.md  README.md  build-docker.sh  publish-docker.sh  publish_docker.sh  pyproject.toml  run-tfc-pipeline.sh  run_bug_analyzer_and_show_fixes.py  run_fix_bugs.sh
.github/workflows/: docker-publish.yml
doc/: SONAR_REPORT.json  complexity_report_schema.json  master_complexity_report_schema.json
src/: find_bugs_and_fix.py  find_bugs_and_report.py  find_source_files.py  logging.yaml  run_bug_analyzer_and_show_fixes_local.py  util.py
src/ai/: __init__.py
src/bug_analyzer/: __init__.py
src/code_processor/: __init__.py
src/complexity_analyzer/: __init__.py
src/explain_code/: __init__.py
src/find_bugs/: __init__.py
src/find_source_files/: __init__.py
src/logging_utils/: README.md  __init__.py
src/sonar_analyzer/: __init__.py
src/sonar_scanner/: __init__.py  client.py
src/tfc_code_pipeline/: __init__.py  cli.py  fix_bugs.py  main.py  test_writer.py
src/tfc_test_writer_aider/: cli.py  config.py  main.py  test_writer.py
src/validate_complexity_report/: __init__.py
src/write_tests/: __init__.py
tests/unit/: __init__.py  test_bug_analyzer_xml.py  test_cli.py  test_find_bugs.py  test_find_source_files.py  test_get_affected_files.py  test_main.py  test_schema_cat.py
tfc_test_writer_aider/: cli.py  config.py  main.py
tfc_test_writer_aider/tests/: __init__.py  test_main.py
