[tool.poetry]
name = "tfc-code-pipeline"
version = "0.1.0"
description = "A tool to assist with writing tests for TFC"
authors = ["Michael Lahr <michael.lahr@gmail.com>"]
readme = "README.md"
packages = [
    {include = "tfc_code_pipeline", from = "src"},
    {include = "find_source_files", from = "src"},
    {include = "explain_code", from = "src"},
    {include = "write_tests", from = "src"},
    {include = "find_bugs", from = "src"},
    {include = "code_processor", from = "src"},
    {include = "complexity_analyzer", from = "src"},
    {include = "validate_complexity_report", from = "src"},
    {include = "sonar_scanner", from = "src"}
]

[tool.poetry.dependencies]
python = ">=3.11,<4"
python-dotenv = "^1.0.0"
jsonschema = "^4.17.3"
requests = "^2.31.0"
pydantic-ai = "^0.1.0"
igraph = "^0.11.8"
tiktoken = "^0.9.0"
openai = "^1.76.2"

[tool.poetry.scripts]
tfc-code-pipeline = "tfc_code_pipeline.cli:cli"
find-source-files = "find_source_files:main"
explain-code = "explain_code:main"
write-tests = "write_tests:main"
find-bugs = "find_bugs:main"
analyze-complexity = "complexity_analyzer:main"
validate-complexity-report = "validate_complexity_report:main"
sonar-scan = "sonar_scanner:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
